client/css/style.css
* {
  box-sizing: border-box;
  margin: 0;
  font-family: "Inter", system-ui, sans-serif;
  color: white;
}

body {
  width: 100svw;
  top: 0;
  position: fixed;
  background: #0c0c20;
}

main {
  background: rgba(255, 255, 255, 0.2);
  border: 1px solid rgba(255, 255, 255, 0.3);
  box-shadow: 0px 36px 76px -16px rgba(0, 0, 0, 0.25);
  backdrop-filter: blur(100px);
  /* Note: backdrop-filter has minimal browser support */
  padding: 30px;
  max-width: 800px;
  min-width: 400px;
  margin: 90px auto;
  border-radius: 30px;
}

.departure-wrapper {
  min-height: 0;
  overflow: hidden;
}

.blur {
  width: 400px;
  height: 200px;
  position: fixed;
  background: conic-gradient(from 23.12deg at 50% 50%,
      #5200ff 0deg,
      rgba(20, 0, 255) 75deg,
      #0075ff 183.75deg,
      rgba(9, 112, 255, 0.6) 285deg,
      #5200ff 360deg);
  filter: blur(121px) brightness(160%) saturate(1.4);
}

.flex {
  display: flex;
  align-items: center;
}

h1 {
  font-size: clamp(40px, 5vw, 50px);
  font-weight: 700;
}

select {
  padding: 10px;
  background: rgba(0, 0, 0, 0.05);
  border: 1px solid rgba(255, 255, 255, 0.15);
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
  border-radius: 10px;
  height: fit-content;
  margin-left: 10px;
  cursor: pointer;
  transition: 0.2s;
}

select:hover {
  box-shadow: 0 5px 4px rgba(0, 0, 0, 0.2);
  translate: 0px -1px;
  border: 1px solid rgba(255, 255, 255, 0.3);
}

.train-departure {
  display: flex;
  align-items: center;
  margin: 4px 0;
  justify-content: space-between;
  background: rgba(0, 0, 0, 0.05);
  border: 1px solid rgba(255, 255, 255, 0.15);
  border-radius: 20px;
  padding: 20px;
  animation: load 0.4s;
}

* {
  margin: 0;
}

h2 {
  opacity: 0.8;
  font-weight: 600;
}

h3 {
  font-weight: 500;
  opacity: 0.7;
  font-size: 24px;
  margin: 0 4px;
}

.platforms {
  min-width: 50px;
  text-align: center;
}

p {
  opacity: 0.5;
  font-weight: 300;
}

.left,
.right {
  display: flex;
  align-items: center;
}

* {
  margin: 0;
}

h2 {
  opacity: 0.8;
  font-weight: 600;
}

h3 {
  font-weight: 500;
  opacity: 0.7;
  font-size: 24px;
  margin: 0 4px;
}

.platforms {
  min-width: 50px;
  text-align: center;
}

p {
  opacity: 0.5;
  font-weight: 300;
}

.left,
.right {
  display: flex;
  align-items: center;
}

@keyframes load {
  from {
    translate: 0 3px;
    opacity: 0;
  }
}

@media screen and (max-width: 500px) {
  .right {
    display: block;
  }

  .right p {
    display: inline-block;
  }

  .right h3.scheduled {
    text-align: right;
  }

  .right h3.platforms {
    display: inline-block;
  }

  .train-departure {
    padding: 13px;
  }
}

